--- a/index.html
+++ b/index.html
@@ -51,30 +51,13 @@
     </div>
 
     <script>
-        const tasks = [
-            "Trinke dein Getränk auf Ex.",
-            "Trinke 10 Shots.",
-            "Mache einen Oben-Ohne-Selfie.",
-            "Finde etwas Essbares im Garten und verzehre es.",
-            "Tanze zu Cotton Eye Joe in voller Lautstärke.",
-            "Erfinde ein neues Wort und erkläre seine Bedeutung.",
-            "Mache 20 Kniebeugen.",
-            "Balanciere einen Becher auf deinem Kopf.",
-            "Fasse deinen Nachbarn an der Schulter und gestehe deine Liebe.",
-            "Starte ein Luftgitarren-Solo!",
-            "Gönn dir einen Schluck aus jedem Glas der Runde.",
-            "Gib allen einen Superheldennamen.",
-            "Tausche deinen Platz mit jemand anderem.",
-            "Stell ein Tier pantomimisch dar.",
-            "Mach ein Selfie mit der Person, die du am wenigsten kennst.",
-            "Balanciere einen Löffel auf deiner Stirn.",
-            "Beschwere dich lautstark über die Inneneinrichtung!",
-            "Spiele ein Roboter-Tanz für 30 Sekunden.",
-            "Rufe eine Nummer an und erzähle von deinem Alkoholproblem.",
-            "Erzähle 3 Fakten über dich, von denen 1 gelogen ist."
-        ];
+        async function fetchTasks() {
+            const response = await fetch('tasks.json');
+            return response.json();
+        }
 
-        function generateTask() {
+        async function generateTask() {
+            const tasks = await fetchTasks();
             const randomIndex = Math.floor(Math.random() * tasks.length);
             document.getElementById("task").textContent = tasks[randomIndex];
         }
